modifying css styling

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -13,3 +13,12 @@ body {
     overflow: hidden;
     overflow-y: scroll;
 }
+
+.App {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; 
+    padding: 1rem 0.5rem;
+  }
