--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -1,12 +1,27 @@
 section {
+
+}
+
+.form-section {
+    margin: 2rem 0;
     width: 100%;
-    max-width: 420px;
+    /* max-width: 420px; */
     min-height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     padding: 1rem;
-    background-color: rgba(0,0,0,0.4);
+    background-image: url("../../assets/Welcome-Background.png");
+    background-position: center bottom;
+    background-size: auto 100%;
+}
+
+.form-title {
+    color: white;
+    font-weight: 300;
+    font-size: 30px;
+    margin-left: 1rem;
+    margin-top: 2rem;
 }
 
 form {
@@ -15,20 +30,35 @@ form {
     justify-content: space-evenly;
     flex-grow: 1;
     padding-bottom: 1rem;
+    margin: 1rem;
+    color:white
 }
 
 a, a:visited {
-    color: #fff;
+    color: #00C9FF;
 }
 
 input[type="email"],
 input[type="password"],
 input[type="text"],
-button,
 textarea {
   font-size: 22px;
   padding: 0.25rem;
   border-radius: 0.5rem;
+  border: none;
+  background-color: white;
+}
+
+button {
+    font-size: 22px;
+    color: #0076AA;
+    font-weight: 600;
+    padding: 0.25rem;
+    max-width: 10rem;
+    border-radius: 0.5rem;
+    border: none;
+    background-color: white;
+    margin: 2rem auto 0 auto;
 }
 
 label,
