--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100vw;
     height: 4rem;
-    background: rgb(0, 110, 127);
+    background: #0076AA;
     color: white;
     text-decoration: none;
     display: flex;
