--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -12,6 +12,7 @@ section {
     justify-content: flex-start;
     padding: 1rem;
     background-image: url("../../assets/Welcome-Background.png");
+    /* background-image: linear-gradient(#00C9FF, #0076AA); */
     background-position: center bottom;
     background-size: auto 100%;
 }
@@ -53,12 +54,11 @@ button {
     font-size: 22px;
     color: #0076AA;
     font-weight: 600;
-    padding: 0.25rem;
-    max-width: 10rem;
+    padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     border: none;
     background-color: white;
-    margin: 2rem auto 0 auto;
+    margin: 1rem auto 0 auto;
 }
 
 label,
@@ -66,16 +66,12 @@ button {
   margin-top: 1rem;
 }
 
-button {
-  padding: 0.5rem;
-}
-
 .instructions {
     font-size: 0.75rem;
     border-radius: 0.5rem;
-    background: #000;
+    background: #00698E;
     color: #fff;
-    padding: 0.25rem;
+    padding: 0.5rem;
     position: relative;
     bottom: -10px;
 }
@@ -94,13 +90,18 @@ button {
 }
 
 .valid {
-    color: limegreen;
+    color: white;
     margin-left: 0.25rem;
 }
 
 .invalid {
-    color: red;
+    color: black;
     margin-left: 0.25rem;
+}
+
+.already-in {
+    color: white;
+    text-align: center;
 }
 
 .errmsg {
@@ -113,4 +114,5 @@ button {
 
 .line {
     display: inline-block;
+    font-weight: 600;
 }
