--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -43,8 +43,8 @@ input[type="email"],
 input[type="password"],
 input[type="text"],
 textarea {
-  font-size: 22px;
-  padding: 0.25rem;
+  font-size: 18px;
+  padding: 0.5rem;
   border-radius: 0.5rem;
   border: none;
   background-color: white;
@@ -107,9 +107,9 @@ button {
 .errmsg {
     background-color: lightpink;
     color: firebrick;
-    font-weight: bold;
+    font-weight: 600;
     padding: 0.5rem;
-    margin-bottom: 0.5rem;
+    /* margin-bottom: 0.5rem; */
 }
 
 .line {
