minor styling changes

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
     width: 100vw;
-    height: 4rem;
+    height: 6vh;
     background: #0076AA;
     color: white;
     text-decoration: none;
