--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     width: 100vw;
-    height: 4rem;
+    height: 10.25vh;
     background: white;
     color: #0076AA;
     text-decoration: none;
