--- a/client/src/components/Welcome/Welcome.css
+++ b/client/src/components/Welcome/Welcome.css
@@ -3,6 +3,7 @@
     margin-top: 5rem;
     /* margin: 2rem 0; */
     width: 100%;
+    height: 85.75vh;
     /* max-width: 420px; */
     min-height: 400px;
     padding: 1rem;
