--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -1,12 +1,12 @@
 .form-section {
-    margin: 2rem 0;
     width: 100%;
+    height: 94vh;
     /* max-width: 420px; */
     min-height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 1rem;
+    padding-top: 8rem;
     background-image: url("../../assets/Welcome-Background.png");
     /* background-image: linear-gradient(#00C9FF, #0076AA); */
     background-position: center bottom;
@@ -16,7 +16,7 @@
 .form-title {
     color: white;
     font-weight: 300;
-    font-size: 30px;
+    font-size: 40px;
     margin-left: 1rem;
     margin-top: 2rem;
 }
@@ -39,7 +39,7 @@ input[type="email"],
 input[type="password"],
 input[type="text"],
 textarea {
-  font-size: 18px;
+  font-size: 24px;
   padding: 0.5rem;
   border-radius: 0.5rem;
   border: none;
@@ -47,7 +47,7 @@ textarea {
 }
 
 button {
-    font-size: 22px;
+    font-size: 24px;
     color: #0076AA;
     font-weight: 600;
     padding: 0.5rem 1rem;
@@ -59,7 +59,7 @@ button {
 
 label,
 button {
-  margin-top: 1rem;
+  margin-top: 24px;
 }
 
 .instructions {
