--- a/client/src/pages/Results/Results.css
+++ b/client/src/pages/Results/Results.css
@@ -1,4 +1,19 @@
 #landingpage {
-    padding-top: 50px;
-    margin-top: 50px;
+    width: 100%;
+    height: 92vh;
+    /* max-width: 420px; */
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-top: 2rem;
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    flex-grow: 1;
 }
