--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -16,9 +16,7 @@
     color: white;
     font-weight: 300;
     font-size: 40px;
-    margin-left: 1rem;
-    margin-top: 2rem;
-}
+    margin-left: 1rem;}
 
 form {
     display: flex;
