--- a/client/src/pages/Results/Results.css
+++ b/client/src/pages/Results/Results.css
@@ -1,19 +1,25 @@
 #landingpage {
     width: 100%;
-    height: 80vh;
+    height: 100%;
     /* max-width: 420px; */
     min-height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 2rem;
+    padding-top: 0.5rem;
 }
 
 #content {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    padding: 10px;
     align-items: center;
     align-content: center;
     flex-grow: 1;
+}
+
+.loggedin-name {
+    font-size: 36px;
+    color: #BABABA;
+    margin: 5px;
 }
