--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -25,7 +25,7 @@
     color: #BABABA;
 }
 
-.login-btn, .logout-btn, .signup-btn {
+.logout-btn, .signup-btn {
     font-size: 16px;
     color: white;
     font-weight: 500;
