--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -5,10 +5,10 @@
     flex-direction: column;
     justify-content: flex-start;
     padding: 2rem 25vw;
-    /* background-image: url("../../assets/Welcome-Background.png"); */
-    background-image: linear-gradient(#00C9FF, #0076AA);
+    background-image: url("../../assets/Welcome-Background.png");
+    /* background-image: linear-gradient(#00C9FF, #0076AA); */
     background-position: center bottom;
-    background-size: auto 100%;
+    background-size: cover;
 }
 
 .form-title {
