--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -5,10 +5,10 @@
     flex-direction: column;
     justify-content: flex-start;
     padding: 2rem 6vw;
-    /* background-image: url("../../assets/Welcome-Background.png"); */
-    background-image: linear-gradient(#00C9FF, #0076AA);
+    background-image: url("../../assets/Welcome-Background.png");
+    /* background-image: linear-gradient(#00C9FF, #0076AA); */
     background-position: center bottom;
-    background-size: auto 100%;
+    background-size: cover;
 }
 
 .signup-form-title {
@@ -16,7 +16,6 @@
     font-weight: 300;
     font-size: 40px;
     margin-left: 1rem;
-    /* margin-top: 0; */
 }
 
 .signup-form {
