mild styling to form.css

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -5,6 +5,7 @@
     text-decoration: none;
     background: transparent;
     font-family: 'Montserrat', sans-serif;
+    color: rgb(15, 15, 15);
 }
 
 body {
