--- a/client/src/components/Forms/Form.css
+++ b/client/src/components/Forms/Form.css
@@ -3,6 +3,8 @@
         flex-direction: column;
         justify-content: flex-start;
         padding: 10px;
+        border: solid #BABABA 2px;
+        border-radius: 2rem;
 }
 
 #inputsearchbtn {
@@ -13,4 +15,15 @@
     flex-grow: 1;
     padding-bottom: 1rem;
     margin: 1rem;
+}
+
+
+input[type="text"],
+textarea {
+  font-size: 24px;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: solid #BABABA 2px;
+  background-color: white;
+  margin: 1rem 0;
 }
