--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -36,3 +36,14 @@
     border: none;
     margin: 0.5rem;
 }
+
+.nav-btn {
+    font-size: 16px;
+    color: #008416;
+    font-weight: 500;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    border: 1.75px solid #008416;
+    background-color: white;
+    margin: 0.5rem;
+}
