--- a/client/src/components/Data/data.css
+++ b/client/src/components/Data/data.css
@@ -2,3 +2,15 @@
     margin: 10px;
     padding: 10px;
 }
+
+.save-btn {
+    font-size: 16px;
+    color: white;
+    font-weight: 500;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    border: none;
+    background-color: #0076AA;
+    border: none;
+    margin: 0.5rem;
+}
