--- a/client/src/pages/Results/Results.css
+++ b/client/src/pages/Results/Results.css
@@ -23,3 +23,10 @@
     color: #BABABA;
     margin: 5px;
 }
+
+@media only screen and (max-width: 768px) {
+    .loggedin-name {
+        font-size: 28px;
+        text-align: center;
+    }
+}
