--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -35,3 +35,18 @@ a:active {
     background-color: transparent;
     text-decoration: underline;
 }
+
+#footer-break {
+    display: none;
+}
+
+
+@media only screen and (max-width: 768px) {
+    .footer {
+        font-size: x-small;
+    }
+
+    #footer-break {
+        display: inline;
+    }
+}
