--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -64,7 +64,7 @@
     padding: 0.5rem;
     height: fit-content;
     min-width: 15rem;
-    background-color: rgb(0, 48, 53);
+    background-color: white;
     border-radius: 1rem;
 }
 
